--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid">
+<div class="container-fluid back">
     <div class="row">
-        <div class="col-md-6" id="img-bg"></div>
+        <div class="col-md-7" id="img-bg"></div>
 
-        <div class="col-md-6 mt-5 mb-5">
+        <div class="col-md-5 mt-5 mb-5">
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10">
@@ -48,7 +48,7 @@
 
                         <div class="d-flex justify-content-center">
 
-                            <button type="submit" class="btn btn-danger mr-4">Cancelar</button>
+                            <button type="submit" class="btn btn-danger mr-4 "routerLink='/entrar'>Cancelar</button>
                             <button type="submit" class="btn btn-success">Cadastrar</button>
                         </div>
 
