--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -1,10 +1,10 @@
-<div class="container-fluid">
+<div class="container-fluid back">
 
     <div class="row d-flex align-items-center">
-        <div class="col-md-6">
+        <div class="col-md-5">
 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
+            <div class="row d-flex justify-content-center ">
+                <div class="col-md-5">
                     <h1 class="text-center mb-3">Entrar</h1>
 
                     <div class="form-group">
@@ -20,8 +20,8 @@
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-success">Entrar</button>
                     </div>
-                    <hr class="mt-5 mb-5">
-                    <p>Não tem uma conta?<a href="">Cadastre-se</a>
+                    <hr class="mt-5 mb-3">
+                    <p>Não tem uma conta?<a routerLink='/cadastrar'> Cadastre-se</a>
                     </p>
 
 
@@ -29,6 +29,6 @@
 
             </div>
         </div>
-        <div class="col-md-6" id="img-bg"></div>
+        <div class="col-md-7" id="img-bg"></div>
     </div>
 </div>
