--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -10,36 +10,38 @@
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input class="form-control" type="txt" name="nome" id="nome" aria-placeholder="Seu Nome">
+                        <input [(ngModel)]='user.nome' class="form-control" type="txt" name="nome" id="nome"
+                            placeholder="Seu Nome">
 
 
                         <div class="form-group">
                             <label for="usuario">Usuário</label>
-                            <input class="form-control" type="txt" name="ususario" id="usuario"
-                                aria-placeholder="Seu Usuário">
+                            <input [(ngModel)]='user.usuario' class="form-control" type="txt" name="ususario"
+                                id="usuario" placeholder="Seu Usuário">
                         </div>
 
                         <div class="form-group">
                             <label for="foto">Link da foto</label>
-                            <input class="form-control" type="txt" name="foto" id="foto"
-                                aria-placeholder="Link da sua foto">
+                            <input [(ngModel)]='user.foto' class="form-control" type="txt" name="foto" id="foto"
+                                placeholder="Link da sua foto">
                         </div>
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input class="form-control" type="txt" name="senha" id="senha" aria-placeholder="Sua Senha">
+                            <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha"
+                                id="senha" placeholder="Sua Senha">
                         </div>
 
 
                         <div class="form-group">
                             <label for="confirmeSenha">Confirmar Senha</label>
-                            <input class="form-control" type="txt" name="confirmeSenha" id="confirmeSenha"
-                                aria-placeholder="Comfirme Sua Senha">
+                            <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmeSenha"
+                                id="confirmeSenha" placeholder="Comfirme Sua Senha">
                         </div>
 
                         <div class="form-group">
                             <label for="tipo">tipo de Usuário</label>
-                            <select class="form-control" name="tipo" id="tipo">
+                            <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)  '>
                                 <option>Selecione um tipo de usuário:</option>
                                 <option value="normal">Normal</option>
                                 <option value="adm">administrador</option>
@@ -48,8 +50,9 @@
 
                         <div class="d-flex justify-content-center">
 
-                            <button type="submit" class="btn btn-danger mr-4 "routerLink='/entrar'>Cancelar</button>
-                            <button type="submit" class="btn btn-success">Cadastrar</button>
+                            <button type="submit" class="btn btn-danger mr-4 " routerLink='/entrar'>Cancelar</button>
+                            <button type="submit" class="btn btn-success" (click)='cadastrar()'>Cadastrar
+                            </button>
                         </div>
 
                     </div>
