--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -9,16 +9,17 @@
 
                     <div class="form-group">
                         <label for="usuario">Usuário</label>
-                        <input class="form-control" type="txt" name="ususario" id="usuario"
-                            aria-placeholder="Seu Usuário">
+                        <input [(ngModel)]='userLogin.usuario' class="form-control" type="txt" name="ususario"
+                            id="usuario" placeholder="Seu Usuário">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="txt" name="senha" id="senha" aria-placeholder="Sua Senha">
+                        <input [(ngModel)]='userLogin.senha' class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Sua Senha">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success">Entrar</button>
+                        <button type="submit" class="btn btn-success" routerLink='/inicio'>Entrar</button>
                     </div>
                     <hr class="mt-5 mb-3">
                     <p>Não tem uma conta?<a routerLink='/cadastrar'> Cadastre-se</a>
