Componente inicio sem consumo

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,11 +5,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto d-flex align-items-center pl-0">
           <li class="nav-item active">
-            <img src="https://engenharia360.com/wp-content/uploads/2019/05/esta-pessoa-nao-existe-engenharia360-4.png" alt="imagen do user
+            <img src="{{foto}}" alt="imagen do user
             " width="50px" height="50px" class="img-fluid rounded-circle">
           </li>
           <li class="nav-item pl-3">
-            <p class="m-0 font-weight-bold text-w  hite fs-16">Nome do Usuario</p>
+            <p class="m-0 font-weight-bold text-w  hite fs-16">Olá, {{nome}}</p>
           </li>
           <li class="nav-item pl-3">
             <a href="">
@@ -20,7 +20,7 @@
 
         <ul class="navbar-nav ml-auto d-flex align-items-center pl-0">
             <li class="nav-item pl-3">
-                <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
 
             </li>
 
