--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -12,7 +12,7 @@
 
       <div class="row d-flex justify-content-center mt-3 mb-5">
         <div class="col-md-6">
-          <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nava Postagem</button>
+          <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
           <a class="btn btn-outline-light" href="#postagens">Ver Postagens</a>
         </div>
       </div>
@@ -75,7 +75,7 @@
             <textarea class="form-control" name="texto" id="texto" rows="3"></textarea>
           </div>
           <div class="form-group">
-            <label for="texto">Escolha um Tema ou <a href="">Cadastre um novo</a>:</label>
+            <label for="texto">Escolha um Tema ou <a data-dismiss="modal" routerLink="/tema">Cadastre um novo</a>: </label>
             <select name="tema" id="tema" class="form-control">
               <option value="">Temas</option>
             </select>
